[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
regex = "1"
itertools = "0.9"
parse-display = "0.4"